# BugTracker

./: .gitignore  README.md
backend/: Cargo.toml
backend/config/: default_config.toml
backend/src/: main.rs
backend/src/chat/: chat_handler.rs  mod.rs
backend/src/database/: dbs.rs  mod.rs
backend/src/utils/: types.rs
backend/src/webserver/: mod.rs  utils.rs  webserver_handler.rs
backend/src/webserver/routes/: api.rs  mod.rs  routes.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: app.js  index.js
frontend/src/components/: auth.jsx  error-utils.jsx  index.css  index.js  interaction.jsx  item-card.jsx  item-list.jsx  navigation.jsx  new-item.jsx  new-project.jsx  private-route.jsx  tasks.jsx
frontend/src/pages/: admin.jsx  chat.jsx  home.jsx  index.js  insights.jsx  item.jsx  login.jsx  newsfeed.jsx  project.jsx  projects.jsx  setup.jsx  team.jsx
frontend/src/services/: routes.js  utils.js
frontend/src/services/project/: project-utils.js
frontend/src/services/team/: team-utils.js
