[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = "3.0"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
rust-argon2 = "1.0"
rand = "0.8"
rusqlite = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1"
jsonwebtoken = "8.0.1"
toml = "0.5.8"